
@startuml
skinparam dpi 300

' skinparam ClassAttributeIconSize 0

interface Task {
    + {abstract} canRun(now: uint32_t)
    + {abstract} run(now: uint32_t)
}

abstract TimedTask {
    + rate: uint32_t
    - runTime: uint32_t
    + canRun(now: uint32_t)
    + {abstract} run(now: uint32_t)
    + incRunTime(_rate: uint32_t)
}

class Scheduler {
    - tasks: Task**
    - numOfTasks: uint8_t
    + run()
}

class DataSender {
    - msg: String
    - pins: int*
    + run(now: uint32_t)
}

class DataReceiver {
    - leds: GRGB
    - led_pin: int
    + run(now: uint32_t)
    + canRun(now: uint32_t)
}

TimedTask ..|> Task
Scheduler o-up-> "0..*" Task

DataReceiver .down.|> Task
DataSender -down-|> TimedTask
@enduml